app/traefik/deployment.yaml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Namespace
metadata:
  name: #@ data.values.traefik.namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: #@ data.values.traefik.namespace
spec:
  replicas: 1
  selector:
    matchLabels: #@ data.values.traefik.matchLabels
  template:
    metadata:
      labels: #@ data.values.traefik.matchLabels
    spec:
      serviceAccountName: traefik
      containers:
      - image: traefik:v2.0
        name: main
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /etc/traefik
          name: config
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
          protocol: TCP
        - name: https
          containerPort: 443
          hostPort: 443
          protocol: TCP
        - name: dashboard
          containerPort: 8080
          protocol: TCP
        - name: metrics
          containerPort: 8082
          protocol: TCP
        args:
        - --configfile=/config/traefik.yaml
      volumes:
      - name: config
        configMap:
          name: traefik
